parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     program -> expression
Rule 4     program -> program expression
Rule 5     program -> while_statement
Rule 6     program -> program while_statement
Rule 7     statement -> INT ID EQUAL expression
Rule 8     statement -> STR ID EQUAL expression
Rule 9     statement -> ID EQUAL expression
Rule 10    term -> expression
Rule 11    term -> statement
Rule 12    term -> INT
Rule 13    term -> STR
Rule 14    expression -> expression PLUS term
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression MINUS term
Rule 17    expression -> expression MINUS expression
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> LPAREN statement RPAREN
Rule 20    expression_while -> LPAREN expression RPAREN
Rule 21    expression_while -> LPAREN statement RPAREN
Rule 22    expression_while -> LPAREN program RPAREN
Rule 23    while_statement -> WHILE expression EQUALS expression
Rule 24    while_statement -> WHILE expression EQUALS expression expression_while
Rule 25    while_statement -> WHILE expression NOTEQUAL expression
Rule 26    while_statement -> WHILE expression NOTEQUAL expression expression_while
Rule 27    expression -> ID
Rule 28    expression -> NUMBER
Rule 29    expression -> STRING
Rule 30    statement -> RETURN expression
Rule 31    statement -> RETURN statement
Rule 32    statement -> COMENT

Terminals, with rules where they appear

COMENT               : 32
EQUAL                : 7 8 9
EQUALS               : 23 24
ID                   : 7 8 9 27
INT                  : 7 12
LPAREN               : 18 19 20 21 22
MINUS                : 16 17
NOTEQUAL             : 25 26
NUMBER               : 28
PLUS                 : 14 15
RETURN               : 30 31
RPAREN               : 18 19 20 21 22
STR                  : 8 13
STRING               : 29
WHILE                : 23 24 25 26
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 7 8 9 10 14 15 15 16 17 17 18 20 23 23 24 24 25 25 26 26 30
expression_while     : 24 26
program              : 2 4 6 22 0
statement            : 1 2 11 19 21 31
term                 : 14 16
while_statement      : 5 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) program -> . expression
    (4) program -> . program expression
    (5) program -> . while_statement
    (6) program -> . program while_statement
    (7) statement -> . INT ID EQUAL expression
    (8) statement -> . STR ID EQUAL expression
    (9) statement -> . ID EQUAL expression
    (30) statement -> . RETURN expression
    (31) statement -> . RETURN statement
    (32) statement -> . COMENT
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING
    (23) while_statement -> . WHILE expression EQUALS expression
    (24) while_statement -> . WHILE expression EQUALS expression expression_while
    (25) while_statement -> . WHILE expression NOTEQUAL expression
    (26) while_statement -> . WHILE expression NOTEQUAL expression expression_while

    INT             shift and go to state 5
    STR             shift and go to state 7
    ID              shift and go to state 6
    RETURN          shift and go to state 8
    COMENT          shift and go to state 9
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    WHILE           shift and go to state 13

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3
    while_statement                shift and go to state 4

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (4) program -> program . expression
    (6) program -> program . while_statement
    (7) statement -> . INT ID EQUAL expression
    (8) statement -> . STR ID EQUAL expression
    (9) statement -> . ID EQUAL expression
    (30) statement -> . RETURN expression
    (31) statement -> . RETURN statement
    (32) statement -> . COMENT
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING
    (23) while_statement -> . WHILE expression EQUALS expression
    (24) while_statement -> . WHILE expression EQUALS expression expression_while
    (25) while_statement -> . WHILE expression NOTEQUAL expression
    (26) while_statement -> . WHILE expression NOTEQUAL expression expression_while

    INT             shift and go to state 5
    STR             shift and go to state 7
    ID              shift and go to state 6
    RETURN          shift and go to state 8
    COMENT          shift and go to state 9
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    WHILE           shift and go to state 13

    statement                      shift and go to state 14
    expression                     shift and go to state 15
    while_statement                shift and go to state 16

state 2

    (1) program -> statement .

    INT             reduce using rule 1 (program -> statement .)
    STR             reduce using rule 1 (program -> statement .)
    ID              reduce using rule 1 (program -> statement .)
    RETURN          reduce using rule 1 (program -> statement .)
    COMENT          reduce using rule 1 (program -> statement .)
    LPAREN          reduce using rule 1 (program -> statement .)
    NUMBER          reduce using rule 1 (program -> statement .)
    STRING          reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (3) program -> expression .
    (14) expression -> expression . PLUS term
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS term
    (17) expression -> expression . MINUS expression

    INT             reduce using rule 3 (program -> expression .)
    STR             reduce using rule 3 (program -> expression .)
    ID              reduce using rule 3 (program -> expression .)
    RETURN          reduce using rule 3 (program -> expression .)
    COMENT          reduce using rule 3 (program -> expression .)
    LPAREN          reduce using rule 3 (program -> expression .)
    NUMBER          reduce using rule 3 (program -> expression .)
    STRING          reduce using rule 3 (program -> expression .)
    WHILE           reduce using rule 3 (program -> expression .)
    $end            reduce using rule 3 (program -> expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18


state 4

    (5) program -> while_statement .

    INT             reduce using rule 5 (program -> while_statement .)
    STR             reduce using rule 5 (program -> while_statement .)
    ID              reduce using rule 5 (program -> while_statement .)
    RETURN          reduce using rule 5 (program -> while_statement .)
    COMENT          reduce using rule 5 (program -> while_statement .)
    LPAREN          reduce using rule 5 (program -> while_statement .)
    NUMBER          reduce using rule 5 (program -> while_statement .)
    STRING          reduce using rule 5 (program -> while_statement .)
    WHILE           reduce using rule 5 (program -> while_statement .)
    $end            reduce using rule 5 (program -> while_statement .)
    RPAREN          reduce using rule 5 (program -> while_statement .)


state 5

    (7) statement -> INT . ID EQUAL expression

    ID              shift and go to state 19


state 6

    (9) statement -> ID . EQUAL expression
    (27) expression -> ID .

    EQUAL           shift and go to state 20
    PLUS            reduce using rule 27 (expression -> ID .)
    MINUS           reduce using rule 27 (expression -> ID .)
    INT             reduce using rule 27 (expression -> ID .)
    STR             reduce using rule 27 (expression -> ID .)
    ID              reduce using rule 27 (expression -> ID .)
    RETURN          reduce using rule 27 (expression -> ID .)
    COMENT          reduce using rule 27 (expression -> ID .)
    LPAREN          reduce using rule 27 (expression -> ID .)
    NUMBER          reduce using rule 27 (expression -> ID .)
    STRING          reduce using rule 27 (expression -> ID .)
    WHILE           reduce using rule 27 (expression -> ID .)
    $end            reduce using rule 27 (expression -> ID .)
    RPAREN          reduce using rule 27 (expression -> ID .)


state 7

    (8) statement -> STR . ID EQUAL expression

    ID              shift and go to state 21


state 8

    (30) statement -> RETURN . expression
    (31) statement -> RETURN . statement
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING
    (7) statement -> . INT ID EQUAL expression
    (8) statement -> . STR ID EQUAL expression
    (9) statement -> . ID EQUAL expression
    (30) statement -> . RETURN expression
    (31) statement -> . RETURN statement
    (32) statement -> . COMENT

    LPAREN          shift and go to state 10
    ID              shift and go to state 24
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    INT             shift and go to state 5
    STR             shift and go to state 7
    RETURN          shift and go to state 8
    COMENT          shift and go to state 9

    expression                     shift and go to state 22
    statement                      shift and go to state 23

state 9

    (32) statement -> COMENT .

    INT             reduce using rule 32 (statement -> COMENT .)
    STR             reduce using rule 32 (statement -> COMENT .)
    ID              reduce using rule 32 (statement -> COMENT .)
    RETURN          reduce using rule 32 (statement -> COMENT .)
    COMENT          reduce using rule 32 (statement -> COMENT .)
    LPAREN          reduce using rule 32 (statement -> COMENT .)
    NUMBER          reduce using rule 32 (statement -> COMENT .)
    STRING          reduce using rule 32 (statement -> COMENT .)
    WHILE           reduce using rule 32 (statement -> COMENT .)
    $end            reduce using rule 32 (statement -> COMENT .)
    PLUS            reduce using rule 32 (statement -> COMENT .)
    MINUS           reduce using rule 32 (statement -> COMENT .)
    RPAREN          reduce using rule 32 (statement -> COMENT .)
    EQUALS          reduce using rule 32 (statement -> COMENT .)
    NOTEQUAL        reduce using rule 32 (statement -> COMENT .)


state 10

    (18) expression -> LPAREN . expression RPAREN
    (19) expression -> LPAREN . statement RPAREN
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING
    (7) statement -> . INT ID EQUAL expression
    (8) statement -> . STR ID EQUAL expression
    (9) statement -> . ID EQUAL expression
    (30) statement -> . RETURN expression
    (31) statement -> . RETURN statement
    (32) statement -> . COMENT

    LPAREN          shift and go to state 10
    ID              shift and go to state 24
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    INT             shift and go to state 5
    STR             shift and go to state 7
    RETURN          shift and go to state 8
    COMENT          shift and go to state 9

    expression                     shift and go to state 25
    statement                      shift and go to state 26

state 11

    (28) expression -> NUMBER .

    PLUS            reduce using rule 28 (expression -> NUMBER .)
    MINUS           reduce using rule 28 (expression -> NUMBER .)
    INT             reduce using rule 28 (expression -> NUMBER .)
    STR             reduce using rule 28 (expression -> NUMBER .)
    ID              reduce using rule 28 (expression -> NUMBER .)
    RETURN          reduce using rule 28 (expression -> NUMBER .)
    COMENT          reduce using rule 28 (expression -> NUMBER .)
    LPAREN          reduce using rule 28 (expression -> NUMBER .)
    NUMBER          reduce using rule 28 (expression -> NUMBER .)
    STRING          reduce using rule 28 (expression -> NUMBER .)
    WHILE           reduce using rule 28 (expression -> NUMBER .)
    $end            reduce using rule 28 (expression -> NUMBER .)
    RPAREN          reduce using rule 28 (expression -> NUMBER .)
    EQUALS          reduce using rule 28 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 28 (expression -> NUMBER .)


state 12

    (29) expression -> STRING .

    PLUS            reduce using rule 29 (expression -> STRING .)
    MINUS           reduce using rule 29 (expression -> STRING .)
    INT             reduce using rule 29 (expression -> STRING .)
    STR             reduce using rule 29 (expression -> STRING .)
    ID              reduce using rule 29 (expression -> STRING .)
    RETURN          reduce using rule 29 (expression -> STRING .)
    COMENT          reduce using rule 29 (expression -> STRING .)
    LPAREN          reduce using rule 29 (expression -> STRING .)
    NUMBER          reduce using rule 29 (expression -> STRING .)
    STRING          reduce using rule 29 (expression -> STRING .)
    WHILE           reduce using rule 29 (expression -> STRING .)
    $end            reduce using rule 29 (expression -> STRING .)
    RPAREN          reduce using rule 29 (expression -> STRING .)
    EQUALS          reduce using rule 29 (expression -> STRING .)
    NOTEQUAL        reduce using rule 29 (expression -> STRING .)


state 13

    (23) while_statement -> WHILE . expression EQUALS expression
    (24) while_statement -> WHILE . expression EQUALS expression expression_while
    (25) while_statement -> WHILE . expression NOTEQUAL expression
    (26) while_statement -> WHILE . expression NOTEQUAL expression expression_while
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING

    LPAREN          shift and go to state 10
    ID              shift and go to state 28
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 27

state 14

    (2) program -> program statement .

    INT             reduce using rule 2 (program -> program statement .)
    STR             reduce using rule 2 (program -> program statement .)
    ID              reduce using rule 2 (program -> program statement .)
    RETURN          reduce using rule 2 (program -> program statement .)
    COMENT          reduce using rule 2 (program -> program statement .)
    LPAREN          reduce using rule 2 (program -> program statement .)
    NUMBER          reduce using rule 2 (program -> program statement .)
    STRING          reduce using rule 2 (program -> program statement .)
    WHILE           reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)
    RPAREN          reduce using rule 2 (program -> program statement .)


state 15

    (4) program -> program expression .
    (14) expression -> expression . PLUS term
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS term
    (17) expression -> expression . MINUS expression

    INT             reduce using rule 4 (program -> program expression .)
    STR             reduce using rule 4 (program -> program expression .)
    ID              reduce using rule 4 (program -> program expression .)
    RETURN          reduce using rule 4 (program -> program expression .)
    COMENT          reduce using rule 4 (program -> program expression .)
    LPAREN          reduce using rule 4 (program -> program expression .)
    NUMBER          reduce using rule 4 (program -> program expression .)
    STRING          reduce using rule 4 (program -> program expression .)
    WHILE           reduce using rule 4 (program -> program expression .)
    $end            reduce using rule 4 (program -> program expression .)
    RPAREN          reduce using rule 4 (program -> program expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18


state 16

    (6) program -> program while_statement .

    INT             reduce using rule 6 (program -> program while_statement .)
    STR             reduce using rule 6 (program -> program while_statement .)
    ID              reduce using rule 6 (program -> program while_statement .)
    RETURN          reduce using rule 6 (program -> program while_statement .)
    COMENT          reduce using rule 6 (program -> program while_statement .)
    LPAREN          reduce using rule 6 (program -> program while_statement .)
    NUMBER          reduce using rule 6 (program -> program while_statement .)
    STRING          reduce using rule 6 (program -> program while_statement .)
    WHILE           reduce using rule 6 (program -> program while_statement .)
    $end            reduce using rule 6 (program -> program while_statement .)
    RPAREN          reduce using rule 6 (program -> program while_statement .)


state 17

    (14) expression -> expression PLUS . term
    (15) expression -> expression PLUS . expression
    (10) term -> . expression
    (11) term -> . statement
    (12) term -> . INT
    (13) term -> . STR
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING
    (7) statement -> . INT ID EQUAL expression
    (8) statement -> . STR ID EQUAL expression
    (9) statement -> . ID EQUAL expression
    (30) statement -> . RETURN expression
    (31) statement -> . RETURN statement
    (32) statement -> . COMENT

    INT             shift and go to state 32
    STR             shift and go to state 33
    LPAREN          shift and go to state 10
    ID              shift and go to state 24
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    RETURN          shift and go to state 8
    COMENT          shift and go to state 9

    expression                     shift and go to state 29
    term                           shift and go to state 30
    statement                      shift and go to state 31

state 18

    (16) expression -> expression MINUS . term
    (17) expression -> expression MINUS . expression
    (10) term -> . expression
    (11) term -> . statement
    (12) term -> . INT
    (13) term -> . STR
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING
    (7) statement -> . INT ID EQUAL expression
    (8) statement -> . STR ID EQUAL expression
    (9) statement -> . ID EQUAL expression
    (30) statement -> . RETURN expression
    (31) statement -> . RETURN statement
    (32) statement -> . COMENT

    INT             shift and go to state 32
    STR             shift and go to state 33
    LPAREN          shift and go to state 10
    ID              shift and go to state 24
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    RETURN          shift and go to state 8
    COMENT          shift and go to state 9

    expression                     shift and go to state 34
    term                           shift and go to state 35
    statement                      shift and go to state 31

state 19

    (7) statement -> INT ID . EQUAL expression

    EQUAL           shift and go to state 36


state 20

    (9) statement -> ID EQUAL . expression
    (14) expression -> . expression PLUS term
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS term
    (17) expression -> . expression MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . LPAREN statement RPAREN
    (27) expression -> . ID
    (28) expression -> . NUMBER
    (29) expression -> . STRING

    LPAREN          shift and go to state 10
    ID              shift and go to state 28
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 37

state 21

    (8) statement -> STR ID . EQUAL expression

    EQUAL           shift and go to state 38


state 22

    (30) statement -> RETURN expression .
    (14) expression -> expression . PLUS term
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS term
    (17) expression -> expression . MINUS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    INT             reduce using rule 30 (statement -> RETURN expression .)
    STR             reduce using rule 30 (statement -> RETURN expression .)
    ID              reduce using rule 30 (statement -> RETURN expression .)
    RETURN          reduce using rule 30 (statement -> RETURN expression .)
    COMENT          reduce using rule 30 (statement -> RETURN expression .)
    LPAREN          reduce using rule 30 (statement -> RETURN expression .)
    NUMBER          reduce using rule 30 (statement -> RETURN expression .)
    STRING          reduce using rule 30 (statement -> RETURN expression .)
    WHILE           reduce using rule 30 (statement -> RETURN expression .)
    $end            reduce using rule 30 (statement -> RETURN expression .)
    RPAREN          reduce using rule 30 (statement -> RETURN expression .)
    EQUALS          reduce using rule 30 (statement -> RETURN expression .)
    NOTEQUAL        reduce using rule 30 (statement -> RETURN expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18

  ! PLUS            [ reduce using rule 30 (statement -> RETURN expression .) ]
  ! MINUS           [ reduce using rule 30 (statement -> RETURN expression .) ]


state 23

    (31) statement -> RETURN statement .

    INT             reduce using rule 31 (statement -> RETURN statement .)
    STR             reduce using rule 31 (statement -> RETURN statement .)
    ID              reduce using rule 31 (statement -> RETURN statement .)
    RETURN          reduce using rule 31 (statement -> RETURN statement .)
    COMENT          reduce using rule 31 (statement -> RETURN statement .)
    LPAREN          reduce using rule 31 (statement -> RETURN statement .)
    NUMBER          reduce using rule 31 (statement -> RETURN statement .)
    STRING          reduce using rule 31 (statement -> RETURN statement .)
    WHILE           reduce using rule 31 (statement -> RETURN statement .)
    $end            reduce using rule 31 (statement -> RETURN statement .)
    PLUS            reduce using rule 31 (statement -> RETURN statement .)
    MINUS           reduce using rule 31 (statement -> RETURN statement .)
    RPAREN          reduce using rule 31 (statement -> RETURN statement .)
    EQUALS          reduce using rule 31 (statement -> RETURN statement .)
    NOTEQUAL        reduce using rule 31 (statement -> RETURN statement .)


state 24

    (27) expression -> ID .
    (9) statement -> ID . EQUAL expression

    PLUS            reduce using rule 27 (expression -> ID .)
    MINUS           reduce using rule 27 (expression -> ID .)
    INT             reduce using rule 27 (expression -> ID .)
    STR             reduce using rule 27 (expression -> ID .)
    ID              reduce using rule 27 (expression -> ID .)
    RETURN          reduce using rule 27 (expression -> ID .)
    COMENT          reduce using rule 27 (expression -> ID .)
    LPAREN          reduce using rule 27 (expression -> ID .)
    NUMBER          reduce using rule 27 (expression -> ID .)
    STRING          reduce using rule 27 (expression -> ID .)
    WHILE           reduce using rule 27 (expression -> ID .)
    $end            reduce using rule 27 (expression -> ID .)
    RPAREN          reduce using rule 27 (expression -> ID .)
    EQUALS          reduce using rule 27 (expression -> ID .)
    NOTEQUAL        reduce using rule 27 (expression -> ID .)
    EQUAL           shift and go to state 20


state 25

    (18) expression -> LPAREN expression . RPAREN
